--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Radio check control, read you lima charlie</p>
