--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <p>Radio check. Pilot, please confirm.</p>
       <p>Radio check control, read you lima charlie</p>
       <p>This is pretty cool.</p>
+      <p>Bad timing to end the class lol</p>
    </body>
 </html>
